third_party/blink/web_tests/external/wpt/FileAPI/idlharness-expected.txt
This is a testharness.js-based test.
Found 57 tests; 55 PASS, 2 FAIL, 0 TIMEOUT, 0 NOTRUN.
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
FAIL Partial interface URL: original interface defined assert_true: Original interface should be defined expected true got false
PASS Blob interface: existence and properties of interface object
PASS Blob interface object length
PASS Blob interface object name
PASS Blob interface: existence and properties of interface prototype object
PASS Blob interface: existence and properties of interface prototype object's "constructor" property
PASS Blob interface: existence and properties of interface prototype object's @@unscopables property
PASS Blob interface: attribute size
PASS Blob interface: attribute type
PASS Blob interface: operation slice(long long, long long, DOMString)
PASS Blob interface: operation stream()
PASS Blob interface: operation text()
PASS Blob interface: operation arrayBuffer()
PASS File interface: existence and properties of interface object
PASS File interface object length
PASS File interface object name
PASS File interface: existence and properties of interface prototype object
PASS File interface: existence and properties of interface prototype object's "constructor" property
PASS File interface: existence and properties of interface prototype object's @@unscopables property
PASS File interface: attribute name
PASS File interface: attribute lastModified
PASS FileList interface: existence and properties of interface object
PASS FileList interface object length
PASS FileList interface object name
PASS FileList interface: existence and properties of interface prototype object
PASS FileList interface: existence and properties of interface prototype object's "constructor" property
PASS FileList interface: existence and properties of interface prototype object's @@unscopables property
PASS FileList interface: operation item(unsigned long)
PASS FileList interface: attribute length
PASS FileReader interface: existence and properties of interface object
PASS FileReader interface object length
PASS FileReader interface object name
PASS FileReader interface: existence and properties of interface prototype object
PASS FileReader interface: existence and properties of interface prototype object's "constructor" property
PASS FileReader interface: existence and properties of interface prototype object's @@unscopables property
PASS FileReader interface: operation readAsArrayBuffer(Blob)
PASS FileReader interface: operation readAsBinaryString(Blob)
PASS FileReader interface: operation readAsText(Blob, DOMString)
PASS FileReader interface: operation readAsDataURL(Blob)
PASS FileReader interface: operation abort()
PASS FileReader interface: constant EMPTY on interface object
PASS FileReader interface: constant EMPTY on interface prototype object
PASS FileReader interface: constant LOADING on interface object
PASS FileReader interface: constant LOADING on interface prototype object
PASS FileReader interface: constant DONE on interface object
PASS FileReader interface: constant DONE on interface prototype object
PASS FileReader interface: attribute readyState
PASS FileReader interface: attribute result
PASS FileReader interface: attribute error
PASS FileReader interface: attribute onloadstart
PASS FileReader interface: attribute onprogress
PASS FileReader interface: attribute onload
PASS FileReader interface: attribute onabort
PASS FileReader interface: attribute onerror
PASS FileReader interface: attribute onloadend
PASS FileReaderSync interface: existence and properties of interface object
Harness: the test ran to completion.

